# pi_distribution_srv

./: .gitignore  CMakeLists.txt  build_armV8.sh  build_x86_64.sh  conanfile.txt  configure_arm_v8.sh  configure_x86_64.sh  default.nix
conan_profiles/: conanprofile_arm_v8  conanprofile_x86_64
src/: DataService.hpp  RndData.cpp  RndData.hpp  RndGenerator.cpp  RndGenerator.hpp  srv.cpp
